--- a/tutorials/hooks/handleError/package.json
+++ b/tutorials/hooks/handleError/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "handlefetch",
+	"name": "handleerror",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -15,13 +15,13 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.20.5",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"prettier": "^3.5.3",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.25.12",
-		"svelte-check": "^4.1.5",
-		"typescript": "^5.8.3",
-		"vite": "^6.2.6"
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"vite": "^6.2.5"
 	}
 }
